Add some text describing equations for dR

--- a/prelim/content/background-pert.tex
+++ b/prelim/content/background-pert.tex
@@ -75,5 +75,14 @@ $\delta R$ can thus be written as
 \begin{equation}\label{eq:bg:pt:green170a}\begin{split}
   \delta R & = \left<\bar{\psi},q^+\right> - \left<\psi,q^+\right> \\
            & = \left<\delta\psi,q^+\right> \\
-           & \stackrel{\includegraphics[height=\fontcharht\font`\B]{../pres-2019.08.30/thinking-face.png}}{=} \left<\psi^+,-\delta H\psi\right>.
+           & \stackrel{\includegraphics[height=\fontcharht\font`\B]{../pres-2019.08.30/thinking-face.png}}{=} \left<\psi^+,-\delta H\psi\right>
 \end{split}\end{equation}
+or similarly as
+\begin{equation}\label{eq:bg:pt:green170b}\begin{split}
+  \delta R & = \left<\bar{\psi}^+,q\right> - \left<\psi^+,q\right> \\
+           & = \left<\delta\psi^+,q\right> \\
+           & \stackrel{\includegraphics[height=\fontcharht\font`\B]{../pres-2019.08.30/thinking-face.png}}{=} \left<\psi,-\delta H^+\psi^+\right>.
+\end{split}\end{equation}
+These expressions for $\delta R$ are powerful because they depend only on the unperturbed forward and adjoint flux distributions.
+Thus, the effects of many different perturbations can be calculated efficiently while only needing to calculate the forward and adjoint flux distributions once.
+These expressions provide the basis for the flux-difference method of solving deep penetration problems.
