--- a/prelim/prelim.tex
+++ b/prelim/prelim.tex
@@ -11,6 +11,8 @@
 \usepackage{acro}
 \usepackage[margin=1.25in]{geometry}
 
+\usepackage{empheq}
+
 \input{includes/preamble}
 \input{includes/defs}
 \input{includes/thesisdefs}
